# CCPlayer

./: .gitignore  BUILDING.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PLANNING.md  README.md  TASK.md  build.rs  rust-toolchain.toml
.claude/: settings.local.json
.claude/commands/: prp.md
.github/workflows/: ci.yml
docs/: Initial_Prompt.md  chromecast_receiver_prompt.md
examples/: draggable_window.rs  test_window.rs  volume_control.rs  webview_embed.rs  window_frame.rs
src/: main.rs
src/audio/: cpal_output.rs  device.rs  mod.rs  sync.rs  volume.rs
src/decoder/: ffmpeg_decoder.rs  frame_queue.rs  hw_accel.rs  mod.rs  stream_info.rs
src/player/: controller.rs  media_player.rs  mod.rs  state.rs
src/renderer/: frame.rs  mod.rs  pipeline.rs  texture.rs  wgpu_renderer.rs
src/renderer/shaders/: video.wgsl
src/utils/: config.rs  error.rs  mod.rs
src/window/: drag.rs  events.rs  mod.rs  resize.rs  winit_window.rs
tests/integration/: Cargo.toml
tests/integration/src/: lib.rs
tests/integration/tests/: player_integration.rs  window_test.rs
