[package]
name = "ccplayer"
version = "0.1.0"
edition = "2021"
authors = ["CCPlayer Contributors"]
description = "A lightweight, high-performance media player with Chromecast support"
license = "MIT"
repository = "https://github.com/mikl0s/CCPlayer"

[dependencies]
# Window Management
winit = { version = "0.30", features = ["rwh_06"] }
raw-window-handle = "0.6"

# GPU Rendering
wgpu = "25.0"
pollster = "0.4"
bytemuck = { version = "1.19", features = ["derive"] }

# Video Decoding
ffmpeg-next = { version = "7.0", features = ["build"] }
ffmpeg-sys-next = { version = "7.0", features = ["build"] }

# Audio Playback
cpal = { version = "0.15", features = [] }
ringbuf = "0.4"
crossbeam = "0.8"

# Async Runtime
tokio = { version = "1.42", features = ["full"] }

# Error Handling & Logging
anyhow = "1.0"
thiserror = "2.0"
log = "0.4"
env_logger = "0.11"

# Utilities
crossbeam-channel = "0.5"
parking_lot = "0.12"
once_cell = "1.20"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Directory utilities
dirs = "5.0"

# CLI
clap = { version = "4.4", features = ["derive"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "dwmapi", "shellapi"] }
windows = { version = "0.61", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }

[target.'cfg(windows)'.dependencies.cpal]
version = "0.15"
features = ["asio"]

[dev-dependencies]
criterion = "0.5"
proptest = "1.6"
tempfile = "3.14"

[[bench]]
name = "frame_rendering"
harness = false

[profile.release]
lto = true
opt-level = 3
codegen-units = 1

[profile.dev]
opt-level = 0

[build-dependencies]
pkg-config = "0.3"
glob = "0.3"

[workspace]
members = [".", "tests/integration"]