[package]
name = "ccplayer-integration-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
ccplayer = { path = "../.." }
tokio = { version = "1.42", features = ["full", "test-util"] }
anyhow = "1.0"
tempfile = "3.14"
once_cell = "1.20"

# Testing utilities
mockall = "0.13"
serial_test = "3.1"

# For generating test media files
image = "0.25"
hound = "3.5"

[dev-dependencies]
criterion = "0.5"